--- a/src/backend/ml_pipeline/feature_engineering.ipynb
+++ b/src/backend/ml_pipeline/feature_engineering.ipynb
@@ -7,13 +7,14 @@
    "source": [
     "### TODO: Feature Engineering\n",
     "\n",
-    "\"#### Primary tasks (must-have)\\n\",\n",
-    "- [ ]Feature engineering → create new features
-     - [ ]Encoding categorical variables → numeric
-     - [ ]Feature transformation → normalize/skew fixes
-     - [ ] Feature scaling → min-max or standardize numeric features
-
-    "\"#### Secondary tasks (second essentials)\\n\",\n",
+    "#### Primary tasks (must-have)\n",
+    "- [ ] train_real + train_synthetic\n",
+    "- [ ] Feature engineering → create new features\n",
+    "- [ ] Encoding categorical variables → numeric\n",
+    "- [ ] Feature transformation → normalize/skew fixes\n",
+    "- [ ] Feature scaling → min-max or standardize numeric features\n",
+    "\n",
+    "#### Secondary tasks (second essentials)\n",
     "- [ ] [Supervised ML] Preserve TF-IDF vocabulary/features used by the RandomForest text pipeline so SHAP explains identical dimensions (Tip: dump `tfidf.get_feature_names_out()` with the encoder artifacts).\n",
     "- [ ] [Unsupervised ML] Assemble the Isolation-Forest feature frame (`Hour`, `Src_IP_LastOctet`, etc.) and record any imputations so runtime anomaly detection feeds match training."
    ]
@@ -26,7 +27,6 @@
    "outputs": [],
    "source": [
     "# Load Dataset from the Google Drive\n",
-    "\n",
     "\n"
    ]
   }
