--- a/src/backend/ml_pipeline/train_model.ipynb
+++ b/src/backend/ml_pipeline/train_model.ipynb
@@ -11,7 +11,6 @@
     "- [ ] **Reproducibility**: Set a global `RANDOM_STATE` (e.g., 42) for all models/CV to ensure results are repeatable.\n",
     "- [ ] **Cross-Validation**: Implement `StratifiedKFold` (e.g., k=5) on the training set. Do not rely solely on a single validation split; this detects if your model is overfitting.\n",
     "- [ ] **Leakage Prevention**: Ensure preprocessing (scaling, encoding) is wrapped inside an `sklearn.pipeline.Pipeline` so it runs *within* each CV fold.\n",
-    "- [ ] **Baseline Models (Model Selection)**: Train multiple estimators (RF, XGBoost, LightGBM, LogisticRegression) using the training split; compare valid metrics to select the best architecture.\n",
     "- [ ] **Metrics**: Track **Precision, Recall, F1-Score (Macro & Weighted)**, and Confusion Matrix. Accuracy is often misleading for rare attacks.\n",
     "- [ ] **Hyperparameter Search**: `RandomizedSearchCV` should emit both best params and performance deltas versus baseline.\n",
     "- [ ] **[Supervised ML] Pipeline**: Lock down the final classifier as `Pipeline([('preprocessor', ColumnTransformer), ('clf', BestModel)])` (replacing TF-IDF text logic with Tabular OneHot/Scaling) and store tuned params.\n",
@@ -19,8 +18,9 @@
     "- [ ] **Persist Artifacts**: Save the *final* selected model + preprocessing pipeline via `joblib.dump` for downstream inference.\n",
     "- [ ] **Add Deep Learning Model for comparison**\n",
     "\n",
-    "#### Secondary tasks (second essentials)\n",
+    "#### Secondary tasks (second essentials *after training the model)\n",
     "- [ ] **Explainability**: Train a SHAP explainer on the final pipeline (using a background sample) and serialize it.\n"
+    
    ]
   },
   {
