Refactor feature engineering tasks in notebook

--- a/src/backend/ml_pipeline/feature_engineering.ipynb
+++ b/src/backend/ml_pipeline/feature_engineering.ipynb
@@ -1,46 +1,23 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "a7bc1987",
-   "metadata": {},
-   "source": [
-    "### TODO: Feature Engineering\n",
-    "\n",
-    "#### Primary tasks (must-have)\n",
-    "- [ ] train_real + train_synthetic\n",
-    "- [ ] Feature engineering → create new features\n",
-    "- [ ] Encoding categorical variables → numeric\n",
-    "- [ ] Feature transformation → normalize/skew fixes\n",
-    "- [ ] Feature scaling → min-max or standardize numeric features\n",
-    "\n",
-    "#### Secondary tasks (second essentials)\n",
-    "- [ ] [Supervised ML] Preserve TF-IDF vocabulary/features used by the RandomForest text pipeline so SHAP explains identical dimensions (Tip: dump `tfidf.get_feature_names_out()` with the encoder artifacts).\n",
-    "- [ ] [Unsupervised ML] Assemble the Isolation-Forest feature frame (`Hour`, `Src_IP_LastOctet`, etc.) and record any imputations so runtime anomaly detection feeds match training.",
-    "\n",
-    "#### Reminder (After splitting) \n",
-    "- [ ] Training Data → Feature Engineering → for Train Model\n",
-    "- [ ] Test/Validation Data → Apply Training Feature Engineering → to Evaluate Model,
-
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ff31e28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load Dataset from the Google Drive\n",
-    "\n"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+ "cell_type": "markdown",
+ "id": "a7bc1987",
+ "metadata": {},
+ "source": [
+  "### TODO: Feature Engineering\n",
+  "\n",
+  "#### Primary tasks (must-have)\n",
+  "- [ ] train_real + train_synthetic\n",
+  "- [ ] Feature engineering → create new features\n",
+  "- [ ] Encoding categorical variables → numeric\n",
+  "- [ ] Feature transformation → normalize/skew fixes\n",
+  "- [ ] Feature scaling → min-max or standardize numeric features\n",
+  "\n",
+  "#### Secondary tasks (second essentials)\n",
+  "- [ ] [Supervised ML] Preserve TF-IDF vocabulary/features used by the RandomForest text pipeline so SHAP explains identical dimensions (Tip: dump `tfidf.get_feature_names_out()` with the encoder artifacts).\n",
+  "- [ ] [Unsupervised ML] Assemble the Isolation-Forest feature frame (`Hour`, `Src_IP_LastOctet`, etc.) and record any imputations so runtime anomaly detection feeds match training.\n",
+  "\n",
+  "#### Reminder (After splitting)\n",
+  "- [ ] Training Data → Feature Engineering → for Train Model\n",
+  "- [ ] Test/Validation Data → Apply Training Feature Engineering → to Evaluate Model\n"
+ ]
 }
