--- a/src/backend/ml_pipeline/feature_engineering.ipynb
+++ b/src/backend/ml_pipeline/feature_engineering.ipynb
@@ -24,6 +24,9 @@
     "- [ ] Training Data → Apply full Feature Engineering pipeline → Train Model\n",
     "- [ ] Validation/Test Data → Apply **same transformations fitted on training data** → Evaluate Model\n",
     "- [ ] Persist all preprocessing objects (scalers, encoders, transformers) for downstream inference\n",
+    "- [ ] Training Dataset > fit + transform\n",
+    " - Validation & Test > transform only\n", 
+    "\n",
    ]
   }
  ],
