Fix formatting in feature_engineering.ipynb

--- a/src/backend/ml_pipeline/feature_engineering.ipynb
+++ b/src/backend/ml_pipeline/feature_engineering.ipynb
@@ -25,7 +25,7 @@
     "- [ ] Validation/Test Data → Apply **same transformations fitted on training data** → Evaluate Model\n",
     "- [ ] Persist all preprocessing objects (scalers, encoders, transformers) for downstream inference\n",
     "- [ ] Training Dataset > fit + transform\n",
-    "- [ ] Validation & Test > transform only\n", 
+    "- [ ] Validation & Test > transform only\n" 
     "\n",
    ]
   }
