--- a/src/backend/ml_pipeline/feature_engineering.ipynb
+++ b/src/backend/ml_pipeline/feature_engineering.ipynb
@@ -20,7 +20,7 @@
     "- [ ] [Unsupervised ML] Assemble the Isolation-Forest feature frame (`Hour`, `Src_IP_LastOctet`, etc.) and record any imputations so runtime anomaly detection feeds match training\n",
     "- [ ] Optional: Visualize distributions of engineered features (histograms, boxplots) to detect outliers or anomalies\n",
     "\n",
-    "#### Reminder (After splitting)\n",
+    "#### Reminder\n",
     "- [ ] Training Data → Apply full Feature Engineering pipeline → Train Model\n",
     "- [ ] Validation/Test Data → Apply **same transformations fitted on training data** → Evaluate Model\n",
     "- [ ] Persist all preprocessing objects (scalers, encoders, transformers) for downstream inference\n",
