--- a/src/backend/feature_engineering.ipynb
+++ b/src/backend/feature_engineering.ipynb
@@ -5,7 +5,7 @@
    "id": "a7bc1987",
    "metadata": {},
    "source": [
-    "### TODO: Feature Engineering\n",
+    "### TODO: Feature Preparation and Transformation\n",
     "\n",
     "#### Primary tasks (must-have)\n",
     "- [ ] Combine training data: `train_real + train_synthetic`\n",
