Fix formatting in model evaluation notebook

--- a/src/backend/model_evaluation.ipynb
+++ b/src/backend/model_evaluation.ipynb
@@ -11,7 +11,10 @@
     "- [ ] Summarize false-positive/false-negative patterns so product can tune thresholds.\n",
     "- [ ] Log action items or follow-ups (e.g., \"need more benign traffic samples\") before handing off to frontend.\n",
     "- [ ] **Explainability**: Train a SHAP explainer on the final pipeline (using a background sample) and serialize it.\n",
-    "- [ ] Produce SHAP summary plots for the severity classifier so explainability artifacts accompany metrics (Tip: cache top tokens per class for the dashboard).\n"
+    "- [ ] Produce SHAP summary plots for the severity classifier so explainability artifacts accompany metrics (Tip: cache top tokens per class for the dashboard).\n",
+    "- [ ] Save Model.\n"
+
+
    ]
   },
   {
