--- a/src/backend/train_model.ipynb
+++ b/src/backend/train_model.ipynb
@@ -12,7 +12,7 @@
     "- [ ] **Cross-Validation**: Implement `StratifiedKFold` (e.g., k=5) on the training set. Do not rely solely on a single validation split; this detects if your model is overfitting.\n",
     "- [ ] **Leakage Prevention**: Ensure preprocessing (scaling, encoding) is wrapped inside an `sklearn.pipeline.Pipeline` so it runs *within* each CV fold.\n",
     "- [ ] **Metrics**: Track **Precision, Recall, F1-Score (Macro & Weighted)**, and Confusion Matrix. Accuracy is often misleading for rare attacks.\n",
-    "- [ ] **Hyperparameter Search**: `RandomizedSearchCV` should emit both best params and performance deltas versus baseline.\n",
+    "- [ ] **Hyperparameter Tuning**: Manually tune key model hyperparameters and select the configuration with the best validation performance.\n",
     "- [ ] **[Supervised ML] Pipeline**: Lock down the final classifier as `Pipeline([('preprocessor', ColumnTransformer), ('clf', BestModel)])` (replacing TF-IDF text logic with Tabular OneHot/Scaling) and store tuned params.\n",
     "- [ ] **[Unsupervised ML]**: Fit the Isolation Forest on the engineered numeric features (`Hour`, `Src_IP_LastOctet`, etc.) and persist the model.\n",
     "- [ ] **Persist Artifacts**: Save the *final* selected model + preprocessing pipeline via `joblib.dump` for downstream inference.\n",
