--- a/src/backend/data_prep.ipynb
+++ b/src/backend/data_prep.ipynb
@@ -321,7 +321,7 @@
     "if abs(attack_ratio_train - attack_ratio_test) < 0.001:\n",
     "    print(\"PERFECT STRATIFICATION CONFIRMED\")\n",
     "else:\n",
-    "    print(\"arning: Stratification might be off.\")\n",
+    "    print(\"Warning: Stratification might be off.\")\n",
     "\n",
     "output_dir = '/content/drive/MyDrive/ForenXAI_cleaned/'\n",
     "\n",
