--- a/src/backend/feature_prep.ipynb
+++ b/src/backend/feature_prep.ipynb
@@ -5,28 +5,34 @@
    "id": "a7bc1987",
    "metadata": {},
    "source": [
-    "### TODO: Feature Preparation and Transformation\n",
+    "### ✅ Feature Preparation Status\n",
     "\n",
-    "#### Primary tasks (must-have)\n",
-    "- [ ] Combine training data: `train_real + train_synthetic`\n",
-    "- [ ] Feature engineering → create new features (e.g., ratios, aggregations, time-based features)\n",
-    "- [ ] Encoding categorical variables → numeric (e.g., OneHotEncoder, LabelEncoder)\n",
-    "- [ ] Feature transformation → normalize/skew fixes (e.g., log transform, Box-Cox)\n",
-    "- [ ] Feature scaling → min-max or standardize numeric features\n",
-    "- [ ] Save engineered training features to CSV or joblib for reproducibility\n",
+    "#### ✅ Completed (using feature_prep.py + example_run_feature_prep.py)\n",
+    "- [x] Combine training data: `train_real + train_synthetic`\n",
+    "- [x] Feature engineering → basic features (can expand with ratios, aggregations)\n",
+    "- [x] Encoding categorical variables → LabelEncoder for all object types\n",
+    "- [x] Feature transformation → PowerTransformer (Yeo-Johnson) for skew correction\n",
+    "- [x] Feature scaling → StandardScaler for normalization\n",
+    "- [x] Save engineered features → CSV (both unscaled and scaled versions)\n",
+    "- [x] Persist preprocessing objects → joblib (encoders, scalers in feature_engineering/)\n",
+    "- [x] Separate outputs:\n",
+    "  - `train/val/test_features.csv` → unscaled (for Random Forest, Isolation Forest)\n",
+    "  - `train/val/test_features_dl.csv` → scaled (for MLP)\n",
     "\n",
-    "#### Secondary tasks (second essentials)\n",
-    "- [ ] [Supervised ML] Preserve TF-IDF vocabulary/features used by the RandomForest text pipeline so SHAP explains identical dimensions (Tip: dump `tfidf.get_feature_names_out()` with the encoder artifacts)\n",
-    "- [ ] [Unsupervised ML] Assemble the Isolation-Forest feature frame (`Hour`, `Src_IP_LastOctet`, etc.) and record any imputations so runtime anomaly detection feeds match training\n",
-    "- [ ] Optional: Visualize distributions of engineered features (histograms, boxplots) to detect outliers or anomalies\n",
+    "#### 🔧 Optional Enhancements (if needed)\n",
+    "- [ ] Add more engineered features:\n",
+    "  - Flow ratios: `IN_BYTES / (OUT_BYTES + 1e-5)`\n",
+    "  - Packet size entropy\n",
+    "  - Temporal patterns from IAT statistics\n",
+    "- [ ] Visualize feature distributions (histograms, boxplots) to detect outliers\n",
+    "- [ ] Feature selection/importance analysis from Random Forest\n",
     "\n",
-    "#### Reminder\n",
-    "- [ ] Training Data → Apply full Feature Engineering pipeline → Train Model\n",
-    "- [ ] Validation/Test Data → Apply **same transformations fitted on training data** → Evaluate Model\n",
-    "- [ ] Persist all preprocessing objects (scalers, encoders, transformers) for downstream inference\n",
-    "- [ ] Training Dataset > fit + transform\n",
-    "- [ ] Validation & Test > transform only\n" 
-
+    "#### ⚠️ Removed (Not Applicable)\n",
+    "- ~~TF-IDF vocabulary~~ → Not using text data (network traffic features only)\n",
+    "- ~~Hour, Src_IP_LastOctet fields~~ → These don't exist in your dataset\n",
+    "\n",
+    "#### 📊 Current Features (36 total)\n",
+    "Network traffic metrics: PROTOCOL, L7_PROTO, IN_BYTES, IN_PKTS, OUT_BYTES, TCP_FLAGS, FLOW_DURATION_MILLISECONDS, DURATION_OUT, MIN_TTL, LONGEST_FLOW_PKT, SHORTEST_FLOW_PKT, MIN_IP_PKT_LEN, SRC_TO_DST_SECOND_BYTES, DST_TO_SRC_SECOND_BYTES, NUM_PKTS_UP_TO_128_BYTES, NUM_PKTS_128_TO_256_BYTES, NUM_PKTS_256_TO_512_BYTES, NUM_PKTS_512_TO_1024_BYTES, NUM_PKTS_1024_TO_1514_BYTES, TCP_WIN_MAX_IN, TCP_WIN_MAX_OUT, ICMP_TYPE, DNS_QUERY_ID, DNS_QUERY_TYPE, DNS_TTL_ANSWER, FTP_COMMAND_RET_CODE, SRC_TO_DST_IAT_MIN, SRC_TO_DST_IAT_MAX, SRC_TO_DST_IAT_AVG, SRC_TO_DST_IAT_STDDEV, DST_TO_SRC_IAT_MIN, DST_TO_SRC_IAT_MAX, DST_TO_SRC_IAT_AVG, DST_TO_SRC_IAT_STDDEV, Label, Attack"
    ]
   }
  ],
